@@ -131,3 +131,4 @@ dmypy.json
 planetary_fetch-env/
 
 docs/build/
+.planetary_fetch
